# tx2-query

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: show_ddl.rs  test_sql.rs
src/: backend.rs  builder.rs  duckdb.rs  error.rs  lib.rs  postgres.rs  schema.rs  sqlite.rs  sync.rs
tests/: integration_test.rs
