[package]
name = "tx2-query"
version = "0.1.0"
edition = "2021"

[dependencies]
tx2-link = { path = "../tx2-link" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Database backends
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "chrono"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = "0.1"

# Schema introspection
chrono = "0.4"
ahash = "0.8"

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx", "tokio"]
sqlite = ["sqlx", "tokio"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
